--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.122.0
-numpy==2.3.5
-Pillow==12.0.0
-pydantic==2.12.5
-Requests==2.32.5
-torch==2.6.0+cu124
-ultralytics==8.3.191
-uvicorn==0.38.0
-matplotlib==3.5.1
+fastapi
+numpy
+Pillow
+pydantic
+Requests
+torch
+ultralytics
+uvicorn
+matplotlib
+
 
